# struktura

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  fly.toml  plan.md
struktura/: Cargo.toml  latest_test_logs.txt  plan.md
struktura/.sqlx/: query-4228d38bee1fdf1d9d5c044517f5b032e6551ef5f4c251512b160dd767d5405b.json  query-5962fd0d04ee3a65f15e49f530fe5f7fe5dc9f2689fb1ed74a22832af76283cd.json  query-5bb2aefec379469480d04388d6915fa9dd0f089f3c6ed8aef2528fe9c77d9726.json  query-9e7846d24e013377aaa60c3e408a880c0f7613a1c2052b42e07f5183f67667be.json  query-d443886c92a16cce157f52186a14a7a73a17dbdf47c296adadcb2190592f1ab6.json  query-fd5f50965cf7774821e52d48fd33d54417afa9ecd58fd395eb33f53bf0988a16.json
struktura/migrations/: 001_auth.sql
struktura/src/: auth.rs  lib.rs  main.rs  sec.rs  seo.rs  state.rs  stats.rs
struktura/src/calculus/: mod.rs
struktura/src/calculus/beginner/: errors.rs  mod.rs  models.rs  registry.rs  router.rs  traits.rs
struktura/src/calculus/contractor/: errors.rs  mod.rs  models.rs  registry.rs  router.rs  traits.rs
struktura/src/calculus/engineer/: UNIT_CONVERSION.md  errors.rs  mod.rs  models.rs  registry.rs  router.rs  traits.rs
struktura/src/docs/: sec.md  tests.md
struktura/src/pricing/: README.md  converter.rs  errors.rs  mod.rs  models.rs  providers.rs  registry.rs  router.rs  traits.rs
struktura/src/pricing/example/: example.rs
struktura/src/utils/: mod.rs
struktura/src/utils/conversions/: constants.rs  mod.rs  plan.md
struktura/static/: index.html  package.json  robots.txt  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
struktura/static/public/fonts/: fonts.css
struktura/static/src/: index.css  main.jsx  router.jsx
struktura/static/src/components/: DeviceMockups.jsx  Footer.jsx  Hero.jsx  (+5 more)
(+286 files in other folders)
